# RedisWatcher

./: .gitignore  CMakeLists.txt  Dockerfile  config.backend.ini  config.ini  docker-compose.yml
src/: email.c  email.h  main.c  redis.c  redis.h  sms.c  sms.h  watcher.c  watcher.h
